kubernetes/call-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-service
  namespace: messenger
  labels:
    app: call-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: call-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: call-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3003"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: call-service
        image: local/call-service:latest
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 3003
        - name: ws
          containerPort: 8083
        resources:
          limits:
            cpu: 20m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 40
          periodSeconds: 20
          timeoutSeconds: 3
      imagePullSecrets:
      - name: gcr-json-key
      volumes:
      - name: swagger-config
        configMap:
          name: swagger-config
      - name: postgres-secrets
        secret:
          secretName: postgres-secret
      - name: jwt-secrets
        secret:
          secretName: jwt-secret
      - name: redis-secrets
        secret:
          secretName: redis-secret
      - name: kafka-secrets
        secret:
          secretName: kafka-secret
---
apiVersion: v1
kind: Service
metadata:
  name: call-service
  namespace: messenger
  labels:
    app: call-service
spec:
  selector:
    app: call-service
  ports:
    - name: http
      protocol: TCP
      port: 3003
      targetPort: 3003
    - name: ws
      protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
