kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: messenger
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 30080
    - name: websecure
      port: 443
      targetPort: websecure
      nodePort: 30443
    - name: admin
      port: 8080
      targetPort: admin
      nodePort: 30088
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: error-logging-errorpage-service
  namespace: messenger
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: error-logging-errorpage-service

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: messenger
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: user-service

---
apiVersion: v1
kind: Service
metadata:
  name: swagger-service
  namespace: messenger
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: swagger-service
