kubernetes/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: messenger
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 8000
    - name: websecure
      port: 443
      targetPort: 8443
    - name: admin
      port: 8080
      targetPort: 9000
  selector:
    app: traefik
